planapp/appstyle.css
/* ... */
.nav-container:has(input[type="checkbox"]:checked) ~ .container {
  opacity: 0;
}
.nav-container input[type="checkbox"]:checked ~ .hamburger-lines .line1 {
  transform: rotate(45deg);
}

.nav-container input[type="checkbox"]:checked ~ .hamburger-lines .line2 {
  transform: scaleY(0);
}

.nav-container input[type="checkbox"]:checked ~ .hamburger-lines .line3 {
  transform: rotate(-45deg);
}

h1 {
  font-family: 'Julius Sans One', sans-serif;
  font-size: xx-large;
  color: var(--color-black-1);
  text-align: center;
  strong{
      color: var(--color-red-1);
  }
}

